# Scrap-Folha-SP-API

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/orchestrator/: orchestrator.py
src/services/: excel.py  get_cookies.py  get_news.py  html_parser.py  search_query.py
