[project]
name = "scrap-folha-sp-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauai Staingel",email = "kauaimachado@hotmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "requests-html (>=0.10.0,<0.11.0)",
    "lxml-html-clean (>=0.4.3,<0.5.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "selenium (>=4.40.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
